--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,8 +1,8 @@
 html {
   background-color: #E4E9FD;
-  background-image: -webkit-linear-gradient(65deg, #A683E3 50%, #E4E9FD 50%);
+  background-image: -webkit-linear-gradient(65deg, #97B34C 50%, #684CB3 50%);
   min-height: 1000px;
-  font-family: 'helvetica neue';
+  font-family: 'Arial';
 }
 
 h1 {
@@ -19,7 +19,7 @@ h1 {
 }
 
 #heading {
-  background-color: #A683E3;
+  background-color: #fffffffa;
   text-align: center;
 }
 
